# libpcr

./: CMakeLists.txt  build.bat  build.sh
libs/proc/: CMakeLists.txt
pcr/framing/: CMakeLists.txt  any_framer.h  content_length_framer.cpp  content_length_framer.h  length_prefix_framer.cpp  length_prefix_framer.h  ndjson_framer.cpp  ndjson_framer.h
pcr/ipc/: stdio_jsonrpc_session.cpp  stdio_jsonrpc_session.h
pcr/jsonrpc/: CMakeLists.txt  codec.cpp  codec.h  codec_nlohmann.cpp  peer.cpp  peer.h
pcr/proc/: CMakeLists.txt  child_proc.h  child_proc_posix.cpp  child_proc_win.cpp  child_stdio.h  piped_child.h  proc_spec.h
pcr/rpc/: CMakeLists.txt  dispatcher.cpp  error.h  id.h  peer.cpp  peer.h
pcr/stream/: CMakeLists.txt  any_stream.h  fd_stream.cpp  pipe_stream.cpp  pipe_stream.h  pipe_stream_posix.cpp  pipe_stream_win.cpp  socket_stream.cpp  socket_stream.h
tests/: CMakeLists.txt  run_tests.bat  test_helpers.h  test_proc_piped_cat.cpp  test_proc_redirection.cpp
tests/channel/: test_channel_proc_pipes.cpp
tests/framing/: test_framing_content_length_pipes_two_frames.cpp  test_framing_content_length_two_frames.cpp  test_framing_length_prefix_chunky_reads.cpp  test_framing_length_prefix_eof_mid_body.cpp  test_framing_length_prefix_eof_mid_prefix.cpp  test_framing_length_prefix_too_large.cpp  test_framing_length_prefix_two_frames.cpp  test_framing_length_prefix_zero_length.cpp  test_framing_ndjson.cpp
tests/ipc/: test_stdio_jsonrpc_inherit_stderr.cpp  test_stdio_jsonrpc_stderr_flood_server.cpp
tests/jsonrpc/: test_jsonrpc_content_length_pipes_roundtrip.cpp
(+26 files in other folders)
